--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,7 +79,7 @@
     /* 1100px */
     /* max-width: 68.75rem;
     @apply mx-auto w-11/12; */
-    @apply max-w-6xl mx-auto;
+    @apply max-w-6xl mx-auto px-6;
   }
 
   .bg-dark a.custom-link {
@@ -88,15 +88,11 @@
 
   /* Class to adjust with sticky footer */
   .min-h-main {
-    @apply min-h-[calc(100vh-56px)];
+    @apply min-h-[calc(100vh-80px)] h-[calc(100vh-80px)];
   }
 }
 
 @layer utilities {
-  
-  .min-h-main {
-    height: calc(100vh - 80px);
-  }
 
   .animated-underline {
     background-image: linear-gradient(#33333300, #33333300),
