--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,7 +90,7 @@
     /* 1100px */
     /* max-width: 68.75rem;
     @apply mx-auto w-11/12; */
-    @apply max-w-6xl mx-auto px-6;
+    @apply max-w-7xl mx-auto px-6;
   }
 
   .bg-dark a.custom-link {
@@ -128,3 +128,7 @@
     background-size: 0 2px, 100% 2px;
   }
 }
+ .isChoosed {
+  background-color: #22c55e !important;
+    color: white !important;
+ }
