--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -132,3 +132,9 @@
   background-color: #22c55e !important;
     color: white !important;
  }
+ table td, table th {
+  border: 1px solid #dbdbdb;
+  border-width: 0 0 1px;
+  padding: 0.5em 0.75em;
+  vertical-align: top;
+}
