--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -128,3 +128,40 @@
     background-size: 0 2px, 100% 2px;
   }
 }
+
+
+
+/* AboutMe Dots customs */
+.aboutme-wrap .slick-dots {
+  position: initial;
+}
+.aboutme-wrap .slick-dots li {
+  width: auto;
+}
+
+.aboutme-wrap .dots {
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.aboutme-wrap .slick-dots .slick-active .dots {
+  border: 2px solid #000;
+}
+.aboutme-wrap .carousel-next,
+.aboutme-wrap .carousel-prev {
+  position: absolute;
+  top: initial;
+  bottom: -10px;
+  margin: 0 2rem;
+  background-color: inherit;
+  box-shadow: none;
+  color: #555;
+}
+
+.aboutme-wrap .carousel-next:hover,
+.aboutme-wrap .carousel-prev:hover {
+  color: #000;
+  border: none;
+}
