--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,7 +90,7 @@
     /* 1100px */
     /* max-width: 68.75rem;
     @apply mx-auto w-11/12; */
-    @apply max-w-7xl mx-auto px-6;
+    @apply max-w-7xl mx-auto md:px-6 px-2;
   }
 
   .bg-dark a.custom-link {
